changes' is much more useful than 'misc edits' or 'code cleanup.'
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

Fix a crash when using shutdown.
Nicolas Weeger 2010-01-17

Implement a quest in Darcap, just to test stuff - no combat, just get items :)
Nicolas Weeger 2010-01-17

Low-level quest status handling.
Nicolas Weeger 2010-01-17

New property for plugins to get the raw name without any modification.
Nicolas Weeger 2010-01-17

Invalidate parsed dialog when setting the message through a plugin.
Nicolas Weeger 2010-01-17

Add 'min_level' for alchemy formulae.
Nicolas Weeger 2010-01-16

Failing at mushroom of Gourmet only yields ashes instead of some
random nasty effect.
Nicolas Weeger 2010-01-16

Remind player when doing alchemy in wizard mode.
Nicolas Weeger 2010-01-16

Add 'failure_arch' and 'failure_message' to formulas, to have specific
archetypes be generated in case of failure instead of a random effect.
Nicolas Weeger 2010-01-16

Punishment for players selling holy relics from the St Andreas church.
Nicolas Weeger 2010-01-09

New object event for plugins: selling (object is being sold by activator).
Nicolas Weeger 2010-01-09

Plugin utility function cf_map_insert_object_around().
Nicolas Weeger 2010-01-09

The Darcap church is now a sacred place, don't kill ghosts there!
Nicolas Weeger 2010-01-09

Give the price in coins instead of platinum only.
Nicolas Weeger 2010-01-09

Export query_cost_string and cost_string_from_value to plugins.
Nicolas Weeger 2010-01-09

Add account handling code.  This is work in progress - the checked in
piece is the backend piece.  Protocol updates and client interface are
next steps to do.  As part of this, split_string() was modified to take